--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@segment/analytics-next": "^1.81.1",
+    "algoliasearch": "^4.25.2",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@segment/analytics-next": "^1.81.1"
+    "react-instantsearch-dom": "^6.40.4"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -23,6 +24,7 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.0.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
